--- a/profolio.html
+++ b/profolio.html
@@ -47,7 +47,7 @@
                 <a href="20240409/index attr.html"><h1>inline 、inner</h1></a>
                 <a href="20240430/fontawesome.html"><h1>fish</h1></a> 
                 <a href="20240507/fixed.html"><h1>font awesome</h1></a>
-                <a href="/20240514/index.html"><h1>flex</h1></a>
+                <a href="20240514/index.html"><h1>flex</h1></a>
                 <a href="20240521/layout-tag.html"><h1>layout</h1></a>
 </div>
 
