--- a/profolio.html
+++ b/profolio.html
@@ -44,10 +44,10 @@
 <div>
                 <a href="../aeust/20240326/index.html"><h1>first cat web</h1></a>
                 <a href="../aeust/20240402/ch2.html"><h1>intro chapter2</h1></a>
-                <a href="../aeust/20240409/index attr.html"><h1>inline 、inner</h1></a>
+                <a href="../aeust/20240409/index.html"><h1>inline 、inner</h1></a>
                 <a href="../aeust/20240430/Favicon.html"><h1>fish</h1></a> 
-                <a href="../aeust/20240430/fontawesome.html"><h1>font awesome</h1></a>
-                <a href="../aeust/20240514/flex.html"><h1>flex</h1></a>
+                <a href="../aeust/20240507/basic.html><h1>font awesome</h1></a>
+                <a href="../aeust/20240514/flex.html><h1>flex</h1></a>
                 <a href="../aeust/20240521/layout.html"><h1>layout</h1></a>
 </div>
 
